feat: Navegacion con outlet

--- a/GestionHoteleraBackend/package.json
+++ b/GestionHoteleraBackend/package.json
@@ -15,12 +15,16 @@
   "author": "Los chuchos mayas",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/react": "^2.10.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "framer-motion": "^12.12.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
