--- a/GestionHoteleraBackend/package.json
+++ b/GestionHoteleraBackend/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.0",
     "proyecto-final-bimestre-2": "file:"
   },
   "type": "module"
