--- a/GestionHoteleraFrontend/package.json
+++ b/GestionHoteleraFrontend/package.json
@@ -19,7 +19,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
