feat: se agrega la posibilidad de ingresar imagenes

--- a/GestionHoteleraBackend/package.json
+++ b/GestionHoteleraBackend/package.json
@@ -19,8 +19,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "argon2": "^0.41.1",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
